--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.5.5",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.4",
+    "pretty-bytes": "^6.1.1",
     "vue": "latest",
     "vue-router": "latest",
     "vue-toastification": "^2.0.0-rc.5"
