--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     container_name: mycloud-redis
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - ./redis-data:/data
   # nuxt frontend
   frontend:
     build:
