--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,25 @@
     "start": "PORT=4000 node .output/server/index.mjs"
   },
   "dependencies": {
+    "@codemirror/lang-go": "^6.0.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@pinia/nuxt": "^0.6.1",
+    "@vueuse/core": "^11.2.0",
     "floating-vue": "^5.2.2",
+    "i": "^0.3.7",
     "mime": "^4.0.4",
+    "npm": "^10.9.0",
     "nuxt": "^3.13.2",
+    "nuxt-codemirror": "^0.0.11",
     "pinia": "^2.2.5",
     "pretty-bytes": "^6.1.1",
     "uuid": "^11.0.2",
     "vue": "latest",
+    "vue-codemirror": "^6.1.1",
     "vue-router": "latest",
     "vue-tippy": "^6.5.0",
     "vue-toastification": "^2.0.0-rc.5"
