--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,4 +18,12 @@ server {
         rewrite /api/(.*) /$1 break;
         proxy_pass http://backend;
     }
+
+    location /api/ws {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
 }
