--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,6 +20,7 @@ server {
     }
 
     location /api/ws {
+        rewrite ^ /ws break;
         proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
