files.get hanndler modified and a binary only docker file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM golang:1.22.7-alpine
+# Build the application
+FROM golang:1.22.7-alpine AS build
 
 WORKDIR /app
 
@@ -8,4 +9,16 @@ RUN go mod download
 COPY . .
 
 RUN go build -o bin/cloud
+
+# Run the tests
+FROM build AS run-test
+RUN go test -v ./...
+
+# Run the binary
+FROM alpine:latest AS run
+
+WORKDIR /app
+
+COPY --from=build /app /app
+
 CMD ["./bin/cloud", "-"]
