--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ REDIS_PASS=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URL=http://localhost:3000/auth
+
+# Admin's email (google oauth)
+ADMIN_ACCOUNT_EMAIL=
