test workflow added and LICENSE

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ DB_PASS=password
 DB_HOST=database
 DB_PORT=3306
 
+# Can be SILENT, ERROR, WARN, INFO
+DB_LOG_LEVEL=INFO
+
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
@@ -16,6 +19,3 @@ REDIS_PASS=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URL=http://localhost:3000/auth
-
-# Admin's email (google oauth)
-ADMIN_ACCOUNT_EMAIL=
