--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "floating-vue": "^5.2.2",
     "i": "^0.3.7",
     "mime": "^4.0.4",
+    "moment": "^2.30.1",
     "npm": "^10.9.0",
     "nuxt": "^3.13.2",
     "nuxt-codemirror": "^0.0.11",
