--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "PORT=4000 node .output/server/index.mjs"
+    "start": "PORT=4000 node .output/server/index.mjs",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@codemirror/lang-go": "^6.0.1",
@@ -38,7 +39,10 @@
   "devDependencies": {
     "@types/ws": "^8.5.13",
     "autoprefixer": "^10.4.20",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.14"
   },
   "overrides": {
