--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@pinia/nuxt": "^0.6.1",
     "@vueuse/core": "^11.2.0",
+    "chart.js": "^4.4.7",
     "floating-vue": "^5.2.2",
     "i": "^0.3.7",
     "mime": "^4.0.4",
@@ -31,6 +32,7 @@
     "pretty-bytes": "^6.1.1",
     "uuid": "^11.0.2",
     "vue": "latest",
+    "vue-chartjs": "^5.3.2",
     "vue-codemirror": "^6.1.1",
     "vue-router": "latest",
     "vue-tippy": "^6.5.0",
